// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic router test route GET / 1`] = `
Object {
  "status": "ok",
}
`;

exports[`test router GET routes route GET /endangered 1`] = `
Array [
  Object {
    "id": "cd3f1257-0902-49b5-a9ca-857313228c23",
    "name": "Phil",
    "species": "indian_rhinoceros",
  },
]
`;

exports[`test router GET routes route GET /rhinoceros 1`] = `
Array [
  Object {
    "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
    "name": "Clyde",
    "species": "white_rhinoceros",
  },
  Object {
    "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
    "name": "Clydette",
    "species": "white_rhinoceros",
  },
  Object {
    "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
    "name": "Winston",
    "species": "white_rhinoceros",
  },
  Object {
    "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
    "name": "Spike",
    "species": "white_rhinoceros",
  },
  Object {
    "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
    "name": "Stompy",
    "species": "javan_rhinoceros",
  },
  Object {
    "id": "10f44082-c158-4a3e-b66d-afc120a1977f",
    "name": "Stompy Jr",
    "species": "javan_rhinoceros",
  },
  Object {
    "id": "d4bc9bfd-80e6-460e-940f-83fcb701d84e",
    "name": "Reginald",
    "species": "javan_rhinoceros",
  },
  Object {
    "id": "cd3f1257-0902-49b5-a9ca-857313228c23",
    "name": "Phil",
    "species": "indian_rhinoceros",
  },
]
`;

exports[`test router GET routes route GET /rhinoceros/:id - good UUID 1`] = `
Object {
  "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
  "name": "Stompy",
  "species": "javan_rhinoceros",
}
`;

exports[`test router GET routes route GET /rhinoceros?name=&species= 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
      "name": "Winston",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
      "name": "Spike",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
      "name": "Stompy",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "10f44082-c158-4a3e-b66d-afc120a1977f",
      "name": "Stompy Jr",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "d4bc9bfd-80e6-460e-940f-83fcb701d84e",
      "name": "Reginald",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "cd3f1257-0902-49b5-a9ca-857313228c23",
      "name": "Phil",
      "species": "indian_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?name=Clyde 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?name=Clyde,clYdette 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?names=clyde,Clydette,winston,spike,debra,stompy%20jr,reginald,phil,stompy,stompy&species=white_rhinoceros,javan_rhinoceros 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
      "name": "Winston",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
      "name": "Spike",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
      "name": "Stompy",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "10f44082-c158-4a3e-b66d-afc120a1977f",
      "name": "Stompy Jr",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "d4bc9bfd-80e6-460e-940f-83fcb701d84e",
      "name": "Reginald",
      "species": "javan_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?species= 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
      "name": "Winston",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
      "name": "Spike",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
      "name": "Stompy",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "10f44082-c158-4a3e-b66d-afc120a1977f",
      "name": "Stompy Jr",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "d4bc9bfd-80e6-460e-940f-83fcb701d84e",
      "name": "Reginald",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "cd3f1257-0902-49b5-a9ca-857313228c23",
      "name": "Phil",
      "species": "indian_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?species=white_rhinoceros 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
      "name": "Winston",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
      "name": "Spike",
      "species": "white_rhinoceros",
    },
  ],
}
`;

exports[`test router GET routes route GET /rhinoceros?species=white_rhinoceros,javan_rhinoceros 1`] = `
Object {
  "rhinoceroses": Array [
    Object {
      "id": "08da0048-c5a0-4722-8ec6-75b9b1b046e3",
      "name": "Clyde",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "70314997-b314-4a30-b5bc-1ed9fbd030c8",
      "name": "Clydette",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "3ec7086a-3770-4c41-ac4e-c3139f7b1b5d",
      "name": "Winston",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "8704bbcb-9073-42e4-a3c7-07444dd44bc0",
      "name": "Spike",
      "species": "white_rhinoceros",
    },
    Object {
      "id": "a832bb9e-f20b-4be5-94aa-cf7883939b67",
      "name": "Stompy",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "10f44082-c158-4a3e-b66d-afc120a1977f",
      "name": "Stompy Jr",
      "species": "javan_rhinoceros",
    },
    Object {
      "id": "d4bc9bfd-80e6-460e-940f-83fcb701d84e",
      "name": "Reginald",
      "species": "javan_rhinoceros",
    },
  ],
}
`;
